fixed align of Simon Type on the detail page
git-svn-id: https://javasimon.googlecode.com/svn/trunk@645 b27f8733-aa53-0410-bf41-0b3b0dae0d5f

--- a/console/embed/src/main/resources/org/javasimon/console/resource/css/javasimon.css
+++ b/console/embed/src/main/resources/org/javasimon/console/resource/css/javasimon.css
@@ -265,7 +265,7 @@ div.detailViewSection > div.title {
     height: 2em;
 }
 
-div.detailViewSection > table.formTable > tbody > tr > td img {
+div.detailViewSection > table.formTable > tbody > tr > td img,span {
     vertical-align: middle;
 }
 
